Light housekeeping. Making lab aware of the new site, so we can get their descriptions and photos

--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=OmgSVN4AAAAJ&hl=en&oi=ao"
   email            :
-  researchgate     :  "https://www.researchgate.net/profile/Agung-Julius"
+  researchgate     : "https://www.researchgate.net/profile/Agung-Julius"
   uri              :
   bitbucket        :
   codepen          :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         :
+  linkedin         : "https://linkedin.com/in/agung-julius-7778b8a9"
   orcid            : 
   pinterest        :
   soundcloud       :
