--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "People"
-    url: /people/
+  - title: "Group"
+    url: /group/
     
   - title: "Teaching"
     url: /teaching/    
